# ml-poc-rs

./: Cargo.toml
poc1/: Cargo.toml
poc1/src/: main.rs
poc2-logistic-regression/: Cargo.toml
poc2-logistic-regression/data/: train.csv
poc2-logistic-regression/src/: main.rs
poc2/data/: test.csv
poc3-multi-logistic-regression/: Cargo.toml
poc3-multi-logistic-regression/data/: test.csv  train.csv
poc3-multi-logistic-regression/src/: main.rs
