[package]
name = "poc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
linfa = { version = "0.6.0", features = ["openblas-system"] }
linfa-logistic = "0.6.0"
ndarray = { version = "0.15.6", default-features = false }
ndarray-csv = "0.5.1"
